--- a/client/src/styles/Profile.module.css
+++ b/client/src/styles/Profile.module.css
@@ -1,70 +1,48 @@
-.container{
-  width: 100vw;
-  height: 100vh;
+.mainContainer{
+  max-width: 1000px;
+  margin: 0 auto;
+}
+.postsContainer{
   display: flex;
+  margin: 0 auto;
+  justify-content: center;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
 }
 
-.formContainer{
+.userInfoContainer{
+  padding-top: 150px;
   display: flex;
-  flex-direction: column;
-  padding: 1rem;
-  animation: animaForm .4s forwards ease-in-out;
+  justify-content: center;
+  gap: 2em;
+  margin-bottom: 5em;
 }
 
-.title{
-  font-size: 3rem;
-  margin-bottom: 1rem;
-  position: relative;
-  z-index: 1;
-  color: rgba(0, 0, 0, .8);
+.userImageContainer{
+  height:200px;
+  width: 200px;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  border-radius: 50%;
+  border: inset 1px solid rgba(0, 0, 0, .3);
 }
 
-.title::after{
-  content: '';
-  width: 25px;
-  height: 25px;
-  position: absolute;
-  background: linear-gradient(145deg, #3378ff, #9442fe);
-  bottom: 9px;
-  left: 0%;
-  z-index: -1;
-  border-radius: 5px;
-  opacity: .7;
+.userName{
+  text-transform: capitalize;
+  margin-bottom: .5em;
 }
 
-.formContainer input{
-  width: 85%;
-  height: 35px;
-  padding: 0 1rem;
-  margin-bottom: 1em;
-  border-radius: 5px;
-  border: 1px solid #9442fe;
-  outline: none;
-  transition: .3s;
+.userInfoItem{
+  display: flex;
 }
 
-.fileForm{
-  height: 24px !important;
-  padding: 0 !important;
-  border: none !important;
-  border-radius: 0px !important;
-
+.userInfoItem div{
+  margin-right: 1em;
 
 }
 
-.formContainer input:focus{
-  box-shadow: 0 0 2px 1px #3378ff;
-}
-
-.formContainer label{
-  font-family: 'Poppins', sans-serif;
-  font-size: .9rem;
-}
-
-.formContainer button{
+.editProfileButton{
   width: 80%;
   height: 30px;
   border: none;
@@ -75,22 +53,4 @@
   cursor: pointer;
   transition: .3s ease-in-out;
   border-radius: 5px;
-}
-
-.formContainer button:hover{
-  border-radius: 5px;
-}
-
-.dontHaveAccount{
-  margin-top: 2rem;
-}
-
-@keyframes animaForm {
-  from{
-    transform: translateX(-40px);
-    opacity: 0;
-  }to{
-    transform: initial;
-    opacity: initial;
-  }
 }
