added post's pictures comments

--- a/client/src/styles/PostModalInfo.module.css
+++ b/client/src/styles/PostModalInfo.module.css
@@ -31,3 +31,9 @@
   height: 275px;
   background-color: lightgray;
 }
+
+.commentsContainerPicture{
+  width: 500px;
+  height: 615px;
+  background-color: lightgray;
+}
