--- a/client/src/styles/CommentItem.module.css
+++ b/client/src/styles/CommentItem.module.css
@@ -3,7 +3,8 @@
   align-items: center;
   gap: 4px;
   margin-left: 10px;
-  margin-top: 5px;
+  margin-top: 10px;
+  padding-right: 2px;
 }
 
 .commentPicture{
@@ -11,12 +12,13 @@
 }
 
 .commentContentContainer{
-  width: 500px;
+  width: 355px;
+  margin-left: 0px;
   display: flex;
   flex-direction: column;
   background: white;
   padding: 0 5px;
-  border-radius: 0 5px 5px 10px;
+  border-radius: 0 20px 20px 10px;
 
 }
 
