--- a/client/src/styles/Register.module.css
+++ b/client/src/styles/Register.module.css
@@ -5,6 +5,7 @@
   grid-template-columns: 1fr 2.5fr;
   align-items: center;
   justify-content: center;
+  padding-left: 1rem;
 }
 
 .formContainer{
@@ -77,9 +78,13 @@
 }
 
 .sideImage{
-  background: linear-gradient(145deg, darkGray, lightGray);
+  /* background: linear-gradient(145deg, darkGray, lightGray); */
   width: 100%;
   height: 100%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  opacity: .9;
 }
 
 @keyframes animaForm {
